# Shell_1

./: CMakeLists.txt  main.cpp  my_cp.cpp  my_ls.cpp  my_mkdir.cpp  my_mv.cpp  my_rm.cpp
